--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "tw-animate-css": "^1.3.8",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^1.0.3"
   }
 }
